Add working legacy directive

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,7 +5,7 @@
   <title><%= pageTitle %></title>
 </head>
 
-<body>
+<body ng-app="Home">
 
 <section>
   <h3>Server Rendering</h3>
@@ -42,7 +42,7 @@
 
   <ul>
     <li>
-      component: <%= addResult %>
+      <legacy></legacy>
     </li>
     <li>
       js: <span id="legacy-js">I'm blue</span>
