Fix imports and add shared legacy component to examples

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -36,6 +36,9 @@
       <legacy></legacy> <-- should show 'Hello !'
     </li>
     <li>
+      <legacy-shared></legacy-shared> <-- should show 'Hi !'
+    </li>
+    <li>
       js: <span id="legacy-js">I'm blue</span> <-- should be blue
     </li>
 
